[package]
name = "whoison"
version = "0.1.0"
edition = "2021"

authors = ["Cory Ball <cory@nephocode.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
